--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^0.9.0",
     "body-parser": "^1.5.2",
     "express": "^4.7.2",
+    "mongodb": "^1.4.8",
+    "mongoose": "^3.8.14",
     "prelude-ls-extended": "^0.3.0",
-    "redis": "^0.11.0"
+    "redis": "^0.11.0",
+    "request": "^2.40.0"
   },
   "devDependencies": {
     "async": "^0.9.0"
