--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "delayed-job-queue",
+  "name": "database-job-queue",
   "version": "0.0.0",
   "description": "",
   "main": "index.js",
@@ -9,16 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "async": "^0.9.0",
-    "body-parser": "^1.5.2",
-    "express": "^4.7.2",
-    "mongodb": "^1.4.8",
-    "mongoose": "^3.8.14",
-    "prelude-ls-extended": "^0.3.0",
-    "redis": "^0.11.0",
-    "request": "^2.40.0"
-  },
-  "devDependencies": {
-    "async": "^0.9.0"
+    "async": "^1.5.0",
+    "body-parser": "^1.14.1",
+    "express": "^4.13.3",
+    "mongodb": "^2.1.0",
+    "mongoose": "^4.2.10",
+    "prelude-ls-extended": "*",
+    "redis": "^2.4.2",
+    "request": "^2.67.0"
   }
 }
